Libyubikey NEWS -- History of user-visible changes.             -*- outline -*-

* Version 1.4 (unreleased)

** Improved instructions in README on how to build the package.

* Version 1.3 (released 2009-03-25)

** Add YUBIKEY_MODHEX_MAP.

** Use char* instead of uint8_t* for modhex functions.

* Version 1.2 (released 2009-01-13)

** Don't link to libpam.

** Add libtool -export-symbols-regex to restrict exported symbols.

* Version 1.1 (released 2008-06-10)

** Include simple.mk in distribution.

* Version 1.0 (released 2008-06-10)

** Uses autoconf, automake and libtool.

** Renamed function namespace from pof_* to yubikey_*.