@@ -59,6 +59,25 @@ main (void)
     }
   printf ("Modhex-2 success\n");
 
+  yubikey_hex_encode (buf, "test", 4);
+  printf ("modhex-encode(\"test\") = %s\n", buf);
+  if (strcmp (buf, "74657374") != 0)
+    {
+      printf ("Hex failure\n");
+      return 1;
+    }
+  printf ("Hex-1 success\n");
+
+  printf ("modhex-decode(\"%s\") = ", buf);
+  yubikey_hex_decode (buf, buf, strlen ((char *) buf));
+  printf ("%.*s\n", 4, buf);
+  if (memcmp (buf, "test", 4) != 0)
+    {
+      printf ("Hex failure\n");
+      return 1;
+    }
+  printf ("Hex-2 success\n");
+
   strcpy (buf, "0123456789abcdef");
   strcpy (key, "abcdef0123456789");
   printf ("aes-decrypt (data=%s, key=%s)\n => ", buf, key);
