@@ -36,9 +36,9 @@
 # include <stdint.h>
 # include <string.h>
 
-#define YUBIKEY_BLOCK_SIZE 16
-#define YUBIKEY_KEY_SIZE 16
-#define YUBIKEY_UID_SIZE 6
+# define YUBIKEY_BLOCK_SIZE 16
+# define YUBIKEY_KEY_SIZE 16
+# define YUBIKEY_UID_SIZE 6
 
 typedef struct
 {
@@ -66,21 +66,20 @@ typedef yubikey_token_st *yubikey_token_t;
 /* Decrypt TOKEN using KEY and store output in OUT structure.  Note
    that there is no error checking whether the output data is valid or
    not, use yubikey_check_* for that. */
-void
-yubikey_parse (const uint8_t token[YUBIKEY_BLOCK_SIZE],
-	       const uint8_t key[YUBIKEY_KEY_SIZE],
-	       yubikey_token_t out);
+extern void yubikey_parse (const uint8_t token[YUBIKEY_BLOCK_SIZE],
+			   const uint8_t key[YUBIKEY_KEY_SIZE],
+			   yubikey_token_t out);
 
-#define yubikey_counter(ctr) ((ctr) & 0x7FFF)
-#define yubikey_capslock(ctr) ((ctr) & 0x8000)
-#define yubikey_crc_ok_p(tok) \
+# define yubikey_counter(ctr) ((ctr) & 0x7FFF)
+# define yubikey_capslock(ctr) ((ctr) & 0x8000)
+# define yubikey_crc_ok_p(tok) \
   (yubikey_crc16 ((tok), YUBIKEY_BLOCK_SIZE) == YUBIKEY_CRC_OK_RESIDUE)
 
 /*
  * Low-level functions; ModHex.
  */
 
-#define YUBIKEY_MODHEX_MAP "cbdefghijklnrtuv"
+# define YUBIKEY_MODHEX_MAP "cbdefghijklnrtuv"
 
 /* ModHex encode input string SRC of length SRCSIZE and put the zero
    terminated output string in DST.  The size of the output string DST
@@ -93,23 +92,25 @@ extern void yubikey_modhex_encode (char *dst,
 /* ModHex decode input string SRC of length DSTSIZE/2 into output
    string DST.  The output string DST is always DSTSIZE/2 large plus
    the terminating zero.  */
-extern void yubikey_modhex_decode(char *dst,
-				  const char *src,
-				  size_t dstsize);
+extern void yubikey_modhex_decode (char *dst,
+				   const char *src,
+				   size_t dstsize);
+
+/* Hex encode/decode data, same interface as modhex functions. */
+extern void yubikey_hex_encode (char *dst, const char *src, size_t srcsize);
+extern void yubikey_hex_decode (char *dst, const char *src, size_t dstsize);
 
 /*
  * Low-level functions; CRC.
  */
 
-#define	YUBIKEY_CRC_OK_RESIDUE 0xf0b8
-uint16_t
-yubikey_crc16 (const uint8_t *buf, size_t buf_size);
+# define YUBIKEY_CRC_OK_RESIDUE 0xf0b8
+extern uint16_t yubikey_crc16 (const uint8_t * buf, size_t buf_size);
 
 /* Low-level functions; AES. */
 
 /* AES-decrypt one 16-byte block STATE using the 128-bit KEY, leaving
    the decrypted output in the STATE buffer. */
-void
-yubikey_aes_decrypt(uint8_t *state, const uint8_t *key);
+extern void yubikey_aes_decrypt (uint8_t * state, const uint8_t * key);
 
 #endif
